--- a/src/test-app.html
+++ b/src/test-app.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Test-App</title>
 
         <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
